padding updating to render correctly on mobile and web

--- a/src/components/Landing/Landing.scss
+++ b/src/components/Landing/Landing.scss
@@ -5,9 +5,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-height: 100%;
+  min-height: 600px;
+  padding-top: 5%;
 }
 .logo{
-  padding-top: 1%;
   padding-bottom: 4%
 }
 .about {
@@ -15,16 +17,17 @@
   font-family: Next-Regular;
   color: #ABABAB;
   font-size: 1em;
-  padding-top: 1%;
-  padding-bottom: 3%;
+  padding-top: 2%;
+  padding-bottom: 5%;
   text-align: center;
 }
 
 .apple {
-  padding-bottom: 3%;
+  padding-bottom: 5%;
 }
 
 .phone {
   position: relative;
+  padding-top: 5%;
   bottom: 0;
 }
